<resources>
    <string name="app_name">Chalange</string>
    <string name="action_settings">Settings</string>
    <string name="pickImage">PICK IMAGE</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="rePassword">Re-Enter Password"</string>
    <string name="agree">I agree</string>
    <string name="gender">Gender:</string>
    <string name="radioMale">Male</string>
    <string name="radioFemale">Female</string>
    <string name="radioOther">Other</string>
    <string name="country">Country:</string>
    <string name="longText">These is our lisence agreement. You can share this app anywhere that you want and use it hoever you want. Just remember to enjoy.</string>
    <string-array name="countries">
        <item>Germany</item>
        <item>USA</item>
        <item>UK</item>
        <item>Hungary</item>
        <item>Canada</item>
        <item>Moldova</item>
    </string-array>
    <string name="registerText">REGISTER</string>
</resources>